[package]
name = "google_auth_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.4"
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
open = "5.0"
base64 = "0.22" # Or latest version - Added this line

[build-dependencies]
slint-build = "1.4" 